# CTD-Client

./: .buildinfo  .drone.yml  .gitmessage  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  README.rst  bugs.html  configuration.html  ctdclient.configurationhandler.html  ctdclient.controller.Controller.html  ctdclient.controller.bottlecontroller.html  ctdclient.controller.configcontroller.html  ctdclient.controller.dshipcontroller.html  ctdclient.controller.html  ctdclient.controller.maincontroller.html  ctdclient.controller.metadatacontroller.html  ctdclient.controller.nrtcontroller.html  ctdclient.controller.plottingcontroller.html  ctdclient.controller.processingcontroller.html  ctdclient.controller.runcontroller.html  ctdclient.definitions.html  ctdclient.eventmanager.html  ctdclient.html  ctdclient.logconfig.html  ctdclient.main.html  ctdclient.model.Model.html  ctdclient.model.bottles.html  ctdclient.model.dshipcaller.html  ctdclient.model.fileupdater.html  ctdclient.model.html  ctdclient.model.metadataheader.html  ctdclient.model.near_real_time_publication.html  ctdclient.model.plotting.html  ctdclient.model.processing.html  ctdclient.model.psa.html  (+46 more)
.doctrees/: bugs.doctree  configuration.doctree  ctdclient.configurationhandler.doctree  ctdclient.controller.Controller.doctree  ctdclient.controller.bottlecontroller.doctree  ctdclient.controller.configcontroller.doctree  ctdclient.controller.doctree  ctdclient.controller.dshipcontroller.doctree  ctdclient.controller.maincontroller.doctree  ctdclient.controller.metadatacontroller.doctree  ctdclient.controller.nrtcontroller.doctree  ctdclient.controller.plottingcontroller.doctree  ctdclient.controller.processingcontroller.doctree  ctdclient.controller.runcontroller.doctree  ctdclient.definitions.doctree  ctdclient.doctree  ctdclient.eventmanager.doctree  ctdclient.logconfig.doctree  ctdclient.main.doctree  ctdclient.model.Model.doctree  ctdclient.model.bottles.doctree  ctdclient.model.doctree  ctdclient.model.dshipcaller.doctree  ctdclient.model.fileupdater.doctree  ctdclient.model.metadataheader.doctree  ctdclient.model.near_real_time_publication.doctree  ctdclient.model.plotting.doctree  ctdclient.model.processing.doctree  ctdclient.model.psa.doctree  ctdclient.model.runseasave.doctree  ctdclient.utils.doctree  ctdclient.view.View.doctree  ctdclient.view.bottleframe.doctree  ctdclient.view.configuration.doctree  ctdclient.view.ctkframe.doctree  ctdclient.view.ctkspinbox.doctree  ctdclient.view.doctree  ctdclient.view.dshipframe.doctree  ctdclient.view.headerframe.doctree  ctdclient.view.infoframe.doctree  (+15 more)
_sources/: bugs.rst.txt  ctdclient.configurationhandler.rst.txt  ctdclient.controller.Controller.rst.txt  ctdclient.controller.bottlecontroller.rst.txt  ctdclient.controller.configcontroller.rst.txt  ctdclient.controller.dshipcontroller.rst.txt  ctdclient.controller.maincontroller.rst.txt  ctdclient.controller.metadatacontroller.rst.txt  ctdclient.controller.nrtcontroller.rst.txt  ctdclient.controller.plottingcontroller.rst.txt  ctdclient.controller.processingcontroller.rst.txt  ctdclient.controller.rst.txt  ctdclient.controller.runcontroller.rst.txt  ctdclient.definitions.rst.txt  ctdclient.eventmanager.rst.txt  ctdclient.logconfig.rst.txt  ctdclient.main.rst.txt  ctdclient.model.Model.rst.txt  ctdclient.model.bottles.rst.txt  ctdclient.model.dshipcaller.rst.txt  ctdclient.model.fileupdater.rst.txt  ctdclient.model.metadataheader.rst.txt  ctdclient.model.near_real_time_publication.rst.txt  ctdclient.model.plotting.rst.txt  ctdclient.model.processing.rst.txt  ctdclient.model.psa.rst.txt  ctdclient.model.rst.txt  ctdclient.model.runseasave.rst.txt  ctdclient.rst.txt  ctdclient.utils.rst.txt  ctdclient.view.View.rst.txt  ctdclient.view.bottleframe.rst.txt  ctdclient.view.configuration.rst.txt  ctdclient.view.ctkframe.rst.txt  ctdclient.view.ctkspinbox.rst.txt  ctdclient.view.dshipframe.rst.txt  ctdclient.view.headerframe.rst.txt  ctdclient.view.infoframe.rst.txt  ctdclient.view.mainwindow.rst.txt  ctdclient.view.measurement.rst.txt  (+11 more)
maps/: germany.xml
processing_configs/: AirPressure.par  linux_template.toml
resources/: ctktheme.json  update_clean_up.bat  update_fixer.bat
templates/: AirPressure.par  base.toml  ctdclient.toml  emb_basic.toml  emb_config.toml  emb_ctdclient.toml  new_proc.toml  nrt_template.toml  processing_template.toml  vCTD_processing.bat
(+188 files in other folders)
