[project]
name = "CTD-Client"
authors = [{ name = "Emil Michels", email = "<emil.michels@iow.de>" }]
version = "0.0.0"
description = "A software tool designed to facilitate the measurement and processing of CTD data using Sea-Bird instruments. The program enhances datasets with ship metadata and ensures standardized, consistent data collection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctd-processing[vis]>=1.9.1",
    "seabirdfilehandler>=0.7.3",
    "tomlkit>=0.12.3",
    "xmltodict>=0.13.0",
    "requests>=2.31.0",
    "customtkinter>=5.2.2",
    "ctkmessagebox>=2.5",
    "ctklistbox>=1.4",
    "psutil>=5.9.8",
    "numpy==2.2.1",
    "platformdirs>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=3.7.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=2.5.0",
    "pyment>=0.3.3",
    "myst-parser>=4.0.1",
    "furo>=2024.8.6",
]

[tool.poetry]
packages = [{ include = "ctdclient", from = "src" }]

[tool.pytest.ini_options]
pythonpath = [".", "src", "src/ctdclient"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore: datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
]

[tool.ruff]
line-length = 79
exclude = ["tests", '__init__.py']

[tool.ruff.lint]
ignore = ["F403", "F821"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
