[project]
name = "CTD-Client"
authors = [{ name = "Emil Michels", email = "emil.michels@iow.de" }]
version = "0.0.0"
description = "A software tool designed to facilitate the measurement and processing of CTD data using Sea-Bird instruments. The program enhances datasets with ship metadata and ensures standardized, consistent data collection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctdam[all]>=1.1.2",
    "requests>=2.31.0",
    "ctkmessagebox>=2.5",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
test = ["pytest>=7.4.2", "pytest-mock>=3.14.0"]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=2.5.0",
    "pyment>=0.3.3",
    "myst-parser>=4.0.1",
    "furo>=2024.8.6",
]

[tool.pytest.ini_options]
pythonpath = [".", "src", "src/ctdclient"]

[tool.ruff]
line-length = 79
exclude = ["tests", '__init__.py']

[tool.ruff.lint]
select = ["ERA001"]
ignore = ["F403", "F821"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctdclient"]
