[project]
name = "CTD-Client"
authors = [{ name = "Emil Michels", email = "emil.michels@iow.de" }]
version = "1.15.1"
description = "A program designed to facilitate the measurement and processing of Sea-Bird SBE9/11 CTD data. The program enhances datasets with ship metadata and ensures standardized, consistent data collection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctdam[all]>=1.1.2",
    "requests>=2.31.0",
    "ctkmessagebox>=2.5",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
test = ["pytest>=7.4.2", "pytest-mock>=3.14.0"]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=2.5.0",
    "pyment>=0.3.3",
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "click-extra[sphinx]>=7.9.0",
]

[project.urls]
Homepage = "https://github.com/DAM-CTD-Software/CTD-Client"
Repository = "https://github.com/DAM-CTD-Software/CTD-Client"
Documentation = "https://dam-ctd-software.github.io/CTD-Client"
Issues = "https://github.com/DAM-CTD-Software/CTD-Client/issues"
Changelog = "https://github.com/DAM-CTD-Software/CTD-Client/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
pythonpath = [".", "src", "src/ctdclient"]

[tool.ruff]
line-length = 79
exclude = ["tests", '__init__.py']

[tool.ruff.lint]
select = ["ERA001"]
ignore = ["F403", "F821"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    ".zenodo.json:version:nf",
    "src/ctdclient/__init__.py:__version__",
]
build_command = "uv build"
upload_to_vcs_release = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctdclient"]
